@@ -2,16 +2,19 @@ use 5.006;
 use strict;
 use warnings;
 use Capture::Tiny qw/capture/;
-use File::Spec::Functions qw/catfile/;
+use File::pushd qw/pushd/;
+use File::Spec::Functions qw/catdir/;
 use Test::Deep;
 use Test::More 0.92;
 
 use App::mymeta_requires;
 
-# Everything listed in t/data/MYMETA.json file
-# We should never have X::Configure::Requires because those would
-# have to be satisfied before MYMETA is created
+# Everything listed in t/data/metaonly/META.json file
+# We should usually never have X::Configure::Requires because those would
+# have to be satisfied before MYMETA is created, but we force it with
+# a bogus module
 my %all_reqs = map { $_ => 1 } qw(
+  X::Configure::Requires
   X::Runtime::Requires
   X::Runtime::Recommends
   X::Runtime::Suggests
@@ -27,7 +30,7 @@ my @cases = (
   },
   {
     options =>  [ qw/--develop/ ],
-    remove =>   [ ],
+    remove =>   [  ],
   },
   {
     options =>  [ qw/--no-suggests/ ],
@@ -41,12 +44,17 @@ my @cases = (
     options =>  [ qw/--no-build --develop/ ],
     remove =>   [ qw/X::Build::Requires/ ],
   },
+  {
+    options =>  [ qw/--no-configure --develop/ ],
+    remove =>   [ qw/X::Configure::Requires/ ],
+  },
 );
 
 for my $c ( @cases ) {
+  my $wd = pushd( catdir( qw/t data metaonly/ ) );
   my @options = @{$c->{options}};
   my $label = @options ? join(" ", @options) : "(default)";
-  local @ARGV = ('--file', catfile(qw/t data MYMETA.json/), @options);
+  local @ARGV = (@options);
   my $app = App::mymeta_requires->new;
   my %expected = %all_reqs;
   delete $expected{$_} for @{ $c->{remove} };
